feat(recipe): refactor bio-lab recipe to support ingredients with quantities and crafting remainder